fixed spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -117,7 +117,7 @@ a:hover {
 
 .clock-placeholder {
 	position: relative;
-	top: 60px;
+	top: 35px;
 }
 
 /* progress screen */
